cameraplugin-aal (0.1.4) UNRELEASED; urgency=low

  * Flash support
  * Zoom support
  * Start viewfinder after capture again

 -- Guenter Schwann <guenter.schwann@canonical.com>  Mon, 29 Oct 2012 16:21:10 +0100

cameraplugin-aal (0.1.3) quantal; urgency=low

  * Building only for i386 and arm, there is no hybris for amd64

 -- Sergio Schvezov <sergio.schvezov@canonical.com>  Mon, 29 Oct 2012 08:43:19 +0100

cameraplugin-aal (0.1.2) quantal; urgency=low

  [ Guenter Schwann ]
  * Create directory to store the images when needed
  * Move file do final destination, instead of saveing it there directly

  [ Bill Filler ]
  * fix debian/control to conflicts, replaces, and provides cameraplugin-fake
    such that upgrades will work correctly
  * fix build-deps in debian/control

 -- Guenter Schwann <guenter.schwann@canonical.com>  Thu, 25 Oct 2012 10:42:25 +0100

cameraplugin-aal (0.1.1) UNRELEASED; urgency=low

  * Working viewfinder

 -- Guenter Schwann <guenter.schwann@canonical.com>  Wed, 24 Oct 2012 17:52:25 +0100

cameraplugin-aal (0.1) UNRELEASED; urgency=low

  * Initial release.

 -- Guenter Schwann <guenter.schwann@canonical.com>  Fri, 05 Oct 2012 12:12:25 +0100