@@ -20,6 +20,7 @@
 #include "aalimagecapturecontrol.h"
 #include "aalcameracontrol.h"
 #include "aalcameraservice.h"
+#include "aalvideorenderercontrol.h"
 #include "storagemanager.h"
 
 #include <camera_compatibility_layer.h>
@@ -79,7 +80,8 @@ void AalImageCaptureControl::cancelCapture()
 void AalImageCaptureControl::shutterCB(void *context)
 {
     Q_UNUSED(context);
-    AalCameraService::instance()->imageCaptureControl()->shutter();
+    QMetaObject::invokeMethod(AalCameraService::instance()->imageCaptureControl(),
+                              "shutter", Qt::QueuedConnection);
 }
 
 void AalImageCaptureControl::saveJpegCB(void *data, uint32_t data_size, void *context)
@@ -100,6 +102,8 @@ void AalImageCaptureControl::updateReady()
 void AalImageCaptureControl::shutter()
 {
     Q_EMIT imageExposed(m_lastRequestId);
+    m_service->videoOutputControl()->createPreview();
+    Q_EMIT imageCaptured(m_lastRequestId, m_service->videoOutputControl()->preview());
 }
 
 void AalImageCaptureControl::saveJpeg(void *data, uint32_t data_size)
@@ -121,7 +125,6 @@ void AalImageCaptureControl::saveJpeg(void *data, uint32_t data_size)
     QFile finalFile(file.fileName());
     finalFile.rename(m_pendingCaptureFile);
 
-    Q_EMIT imageCaptured(m_lastRequestId, QImage());
     Q_EMIT imageSaved(m_lastRequestId, m_pendingCaptureFile);
     m_pendingCaptureFile.clear();
 
