@@ -20,6 +20,7 @@ HEADERS += \
     aalcamerazoomcontrol.h \
     aalimagecapturecontrol.h \
     aalvideorenderercontrol.h \
+    snapshotgenerator.h \
     storagemanager.h
 
 SOURCES += \
@@ -30,4 +31,5 @@ SOURCES += \
     aalcamerazoomcontrol.cpp \
     aalimagecapturecontrol.cpp \
     aalvideorenderercontrol.cpp \
+    snapshotgenerator.cpp \
     storagemanager.cpp
