@@ -3,6 +3,7 @@ cameraplugin-aal (0.1.4) UNRELEASED; urgency=low
   * Flash support
   * Zoom support
   * Start viewfinder after capture again
+  * Generate snapshot after capture
 
  -- Guenter Schwann <guenter.schwann@canonical.com>  Mon, 29 Oct 2012 16:21:10 +0100
 
